# qualmly

./: .gitignore  README.md  index.html  manifest.json  vibecheck.html
.github/workflows/: publish-mobile-pypi.yml  qualmly.yml
docs/: COMMERCIAL-LICENSE.md  DISCLAIMER.md  PRIVACY.md
extensions/: .gitignore  build-chrome.ps1
extensions/chrome/: README.md  manifest.json
extensions/chrome/background/: service-worker.js
extensions/chrome/popup/: popup.html  popup.js
marketing/: COMPETITIVE-ANALYSIS.md  gumroad-listing-v1.3.md
marketing/blog/: audit-post.html
marketing/launch-assets/: README.md  capture.mjs  crop_for_social.py  deep-check-results.md
marketing/launch-posts/: _post-strategy.md  linkedin.md  show-hn.md  tweets-and-dms.md
mobile-scanner/: README.md  pyproject.toml  qualmly_mobile.py
workers/monitoring/: DEPLOY.md  README.md  test-crypto-roundtrip.js  test-stripe-sig.js  wrangler.toml
workers/monitoring/.scripts/: e2e-deep-check.mjs  e2e-launch-eve.mjs  find-mobile-overflow.mjs  preflight.mjs  roll-token.mjs  run-9-times.mjs
workers/monitoring/src/: index.js
